# taller-copilot01

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/tests/: test_auth.py
frontend/: README.md  index.html
frontend/src/: App.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  LoginPage.module.css  WelcomePage.jsx  WelcomePage.module.css
frontend/src/services/: api.js
