[tool.poetry]
name = "jwt-fastapi-backend"
version = "0.1.0"
description = "FastAPI JWT demo"
authors = ["Copilot <copilot@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
